# crowdsec-local-mcp

./: .gitignore  .mcpbignore  README.md  manifest.json  mcp-stdio.py  mcp_core.py  mcp_scenarios.py  mcp_stdio.py  mcp_waf.py  pyproject.toml
.github/workflows/: build-mcpb.yml  build.yml  lint.yaml  publish.yml  pylint.yaml
src/crowdsec_local_mcp/: __init__.py  __main__.py  _version.py  mcp_core.py  mcp_scenarios.py  mcp_waf.py  setup_cli.py  utils.py
src/crowdsec_local_mcp/compose/scenario-test/: .gitignore  docker-compose.yml
src/crowdsec_local_mcp/compose/waf-test/: docker-compose.yml
src/crowdsec_local_mcp/compose/waf-test/nginx/: Dockerfile
src/crowdsec_local_mcp/prompts/: prompt-expr-helpers.txt  prompt-scenario-deploy.txt  prompt-scenario.txt  prompt-waf-pr.txt  prompt-waf-rule-challenge.txt  prompt-waf-tests.txt  prompt-waf-top-level.txt  prompt-waf.txt
tests/: test_mcp_waf_lint.py
tools/: __init__.py  update_manifest_version.py
