[project]
name = "crowdsec-local-mcp"
version = "0.1.0"
description = "An MCP exposing prompts and tools to help users write WAF rules, scenarios etc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1",
    "mcp>=1.15.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
